--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -43,6 +43,13 @@
   cursor: pointer;
 }
 
+@media screen and (min-width: 1440px) {
+  .newscards {
+    width: 1232px;
+    margin: 0 auto;
+  }
+}
+
 @media screen and (max-width: 980px) {
   .newscards {
     padding: 40px;
