--- a/src/components/SavedNewsCardList/SavedNewsCardList.css
+++ b/src/components/SavedNewsCardList/SavedNewsCardList.css
@@ -12,3 +12,10 @@
   gap: 16px;
   margin: 0 auto;
 }
+
+@media screen and (min-width: 1440px) {
+  .saved-news__newscards-container {
+    width: 1232px;
+    margin: 0 auto;
+  }
+}
